--- a/src/main/resources/templates/userConsumeRecord.html
+++ b/src/main/resources/templates/userConsumeRecord.html
@@ -33,9 +33,9 @@
             <span class="gray-text" style="vertical-align: middle">用户A&nbsp;<span class="caret"></span></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="/user/ticket/avail">电影票</a></li>
+            <li><a href="/user/ticket/avail">我的电影票</a></li>
             <li><a href="/user/member">卡包</a></li>
-            <li><a href="/user/record/consume">消费记录</a></li>
+            <li><a href="/user/record/consume">我的消费记录</a></li>
             <li id="logout"><a href="#">登出</a></li>
         </ul>
     </div>
